@@ -1,7 +1,7 @@
 Source: libstream-more-perl
 Section: perl
 Priority: optional
-Build-Depends: cdbs, debhelper (>= 5), libautodie-perl, libclass-c3-perl, libclass-does-moose-perl, libcoro-perl, libdist-zilla-ppb-perl, libfile-spec-perl, libformat-human-bytes-perl, libhttp-message-perl, libio-compress-perl, libipc-system-simple-perl, libjson-xs-perl, liblist-moreutils-perl, libmoose-perl, libmoosex-params-validate-perl, libmoosex-role-parameterized-perl, libmoosex-role-withoverloading-perl, libmoosex-types-perl, libnamespace-autoclean-perl, libnamespace-clean-perl, libparams-validate-perl, libparent-perl, libperl6-slurp-perl, libset-object-perl, libstream-perl (>= 0.9.4), libtest-class-perl, libtest-exception-perl, libtest-fatal-perl, libtest-mock-lwp-dispatch-perl, libtest-simple-perl (>= 0.95), libtry-tiny-perl, liburi-perl, libwww-perl, libyandex-lockf-perl (>= 3.0.0), libyandex-logger-perl, libyandex-persistent-perl (>= 1.3.0), libyandex-ppb-db-perl, libyandex-ppb-progress-perl, libyandex-ppb-test-perl, libyandex-x-perl (>= 1.1.0), perl, yandex-dh-builddeps, yandex-ppb-cdbs
+Build-Depends: cdbs, debhelper (>= 5), libautodie-perl, libclass-c3-perl, libclass-does-moose-perl, libcoro-perl, libdist-zilla-ppb-perl, libfile-spec-perl, libformat-human-bytes-perl, libhttp-message-perl, libio-compress-perl, libipc-system-simple-perl, libjson-xs-perl, liblist-moreutils-perl, libmoose-perl, libmoosex-markasmethods-perl, libmoosex-params-validate-perl, libmoosex-role-parameterized-perl, libmoosex-types-perl, libnamespace-autoclean-perl, libparams-validate-perl, libparent-perl, libperl6-slurp-perl, libset-object-perl, libstream-perl (>= 0.9.4), libtest-class-perl, libtest-exception-perl, libtest-fatal-perl, libtest-mock-lwp-dispatch-perl, libtest-simple-perl (>= 0.95), libtry-tiny-perl, liburi-perl, libwww-perl, libyandex-lockf-perl (>= 3.0.0), libyandex-logger-perl, libyandex-persistent-perl (>= 1.3.0), libyandex-ppb-db-perl, libyandex-ppb-progress-perl, libyandex-ppb-test-perl, libyandex-x-perl (>= 1.1.0), perl, yandex-dh-builddeps, yandex-ppb-cdbs
 # [dh_builddeps] line above is autogenerated; don't touch it
 Maintainer: Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>
 Standards-Version: 3.8.0
